# remi

./: .gitignore  .mcp.json  CLAUDE.md  README.md  package-lock.json  package.json  pyproject.toml  tsconfig.json
docs/: architecture-analysis.md  memory-system-v2-design.md
docs/design/: 1passport-bytedance-sso.md
scripts/: migrate-traces.ts  patch-lark-sdk.mjs  rebuild-metrics.ts
src/: config.ts  core.ts  daemon.ts  index.ts  langsmith-exporter.ts  logger.ts  main.ts  pm2.ts  tracing.ts
src/agents/: index.ts  registry.ts  runner.ts  types.ts
src/auth/: index.ts  oauth-cli.ts  persistence.ts  store.ts  token-sync.ts  types.ts
src/connectors/: base.ts  cli.ts
src/db/: embedding.ts  index.test.ts  index.ts  vector-store.ts
src/imaging/: gemini-client.ts  index.ts  types.ts
src/infra/: symlink-manager.ts
src/mcp/: memory-server.ts
src/memory/: daemon.ts  enqueue.ts  maintenance.ts  migrate-bridge.ts  store.ts
src/metrics/: cli-parser.ts  collector.ts
src/providers/: base.ts
src/queue/: index.ts  queues.ts
src/remi/: __init__.py  __main__.py  config.py  core.py  daemon.py
src/scheduler/: cron-timer.ts  history.ts  job-runner.ts  job-store.ts  jobs.ts
tests/: agents.test.ts  config.test.ts  core.test.ts  imaging.test.ts  jsonl-protocol.test.ts  manifest.test.ts  memory.test.ts  process-manager.test.ts  providers.test.ts  recall-vector.test.ts  test_config.py  test_core.py  test_engines.py  test_jsonl_protocol.py  test_memory.py  test_process_manager.py  test_providers.py
web/: auth.ts  package.json  remi-data.ts  router.ts  server.ts
(+127 files in other folders)
