[project]
name = "remi"
version = "0.1.0"
description = "Remi - Personal AI Assistant"
requires-python = ">=3.10"
dependencies = [
    "python-dotenv>=1.0",
    "tomli>=2.0; python_version < '3.11'",
]

[project.optional-dependencies]
sdk = ["claude-agent-sdk>=0.1.36"]
api = ["anthropic>=0.40"]
feishu = ["lark-oapi>=1.3", "aiohttp>=3.9"]
openai = ["openai>=1.60"]
dev = ["pytest>=8.0", "pytest-asyncio>=0.24", "ruff>=0.8"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/remi"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py310"
line-length = 100
